# physical-ai-humanoid-robotics-textbook

./: .gitattributes  .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  capstone.html  config.json  contributors.html  frontmatter.html  gallery.html  hardware-guide.html  index.html  sidebars.js  sitemap.xml  spec.yaml  tutorial-intro.html
.claude/: settings.local.json
.github/workflows/: deploy.yaml  deploy.yml
.specify/memory/: constitution.md
api/: .env.example  README.md  chatbot_setup.md  main.py  pyproject.toml
api/scripts/: index_content.py  test_qdrant.py
api/src/: main.py
api/src/config/: settings.py
api/src/models/: schemas.py
api/src/routes/: chat.py  health.py
api/src/services/: embeddings.py  indexer.py  llm.py  rag.py
api/src/utils/: chunker.py
assets/css/: styles.45c3095e.css  styles.8faf5cd7.css  styles.ac04d87c.css
assets/files/: subscriber-e535cae1532dd4161c2d658e82ddf755.py
assets/js/: 0ce6063d.52e1f696.js  0e384e19.f4852525.js  17896441.1ee9ec50.js  2feecf75.7536767b.js  31983119.8e0f5bcc.js  3f028461.6fd9c322.js  5448fcf5.577cf673.js  57ea76d7.c8fbfafe.js  5ac9c7af.b36b65dc.js  6538dc93.28b3a87d.js  6c07e4fc.580b21ec.js  6ca7818f.d99c0af7.js  main.11337f1d.js  (+15 more)
capstone/: tasks.html
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  tsconfig.json
modules/: digital-twin.html  isaac.html  ros2.html  vla.html
ur/: 404.html  capstone.html  contributors.html  frontmatter.html  gallery.html  hardware-guide.html  index.html  sitemap.xml  tutorial-intro.html
weeks/: week-01_02.html  week-11_12.html
(+138 files in other folders)
